DevOps/force-app/main/default/objects/Risk__c/fields/Name_of_Program_Person__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Program_Person__c</fullName>
    <description>If yes, please record the name of the Program and Person contacted</description>
    <inlineHelpText>If yes, please record the name of the Program and Person contacted</inlineHelpText>
    <label>Name of Program &amp; Person</label>
    <type>TextArea</type>
</CustomField>