DevOps/force-app/main/default/objects/Risk__c/fields/Name_of_Worker__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of Worker:: Contact Record Type: Record Type NameEQUALSWorker</description>
    <label>Name of Worker:</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Risks4</relationshipName>
    <type>Lookup</type>
</CustomField>