DevOps/force-app/main/default/objects/Risk__c/fields/Neutral_Meeting_Place__c.field-meta.xml
<CustomField>
    <fullName>Neutral_Meeting_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will you use a neutral meeting place?</description>
    <inlineHelpText>Will you use a neutral meeting place?</inlineHelpText>
    <label>Neutral Meeting Place</label>
    <type>Checkbox</type>
</CustomField>