DevOps/force-app/main/default/objects/Risk__c/fields/Nominated_Presenting_Concern__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Presenting_Concern__c</fullName>
    <description>Presenting concern as nominated by client</description>
    <inlineHelpText>Presenting concern as nominated by client</inlineHelpText>
    <label>Nominated Presenting Concern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>