DevOps/force-app/main/default/objects/Risk__c/fields/Notification_to__c.field-meta.xml
<CustomField>
    <fullName>Notification_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Notification to: Contact Record TypeEQUALSWorker</description>
    <label>Notification to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Risks5</relationshipName>
    <type>Lookup</type>
</CustomField>