DevOps/force-app/main/default/objects/Risk__c/fields/Notify_Executive_Manager__c.field-meta.xml
<CustomField>
    <fullName>Notify_Executive_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if Checked then Notify Executive Manager during the approval process</description>
    <inlineHelpText>if Checked then Notify Executive Manager during the approval process</inlineHelpText>
    <label>Notify Executive Manager</label>
    <type>Checkbox</type>
</CustomField>