DevOps/force-app/main/default/objects/Risk__c/fields/Observe_home_and_close_proximity__c.field-meta.xml
<CustomField>
    <fullName>Observe_home_and_close_proximity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Observe home and close proximity, are there any unrestricted animals on the property.</description>
    <inlineHelpText>Observe home and close proximity, are there any unrestricted animals on the property.</inlineHelpText>
    <label>Observe home and close proximity,</label>
    <type>Checkbox</type>
</CustomField>