DevOps/force-app/main/default/objects/Risk__c/fields/Office_visit__c.field-meta.xml
<CustomField>
    <fullName>Office_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ask client to come to office?</description>
    <inlineHelpText>Ask client to come to office?</inlineHelpText>
    <label>Office visit</label>
    <type>Checkbox</type>
</CustomField>