DevOps/force-app/main/default/objects/Risk__c/fields/Other_Actions_specify__c.field-meta.xml
<CustomField>
    <fullName>Other_Actions_specify__c</fullName>
    <description>If Other is selected from the picklist of Actions please specify here</description>
    <inlineHelpText>If Other is selected from the picklist of Actions please specify here</inlineHelpText>
    <label>Other Actions (specify)</label>
    <type>TextArea</type>
</CustomField>