DevOps/force-app/main/default/objects/Risk__c/fields/Other_Agency_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Other_Agency_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records whether an external agency has any restrictions in place for the client in question</description>
    <inlineHelpText>Tick the checkbox if you are aware of any restrictions in place by external agencies</inlineHelpText>
    <label>Other Agency Restrictions</label>
    <type>Checkbox</type>
</CustomField>