DevOps/force-app/main/default/objects/Risk__c/fields/Other_Known_Potential_Risks__c.field-meta.xml
<CustomField>
    <fullName>Other_Known_Potential_Risks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are there any other known potential risks that have come to light?</description>
    <inlineHelpText>Are there any other known potential risks that have come to light?</inlineHelpText>
    <label>Other Known Potential Risks</label>
    <type>Checkbox</type>
</CustomField>