DevOps/force-app/main/default/objects/Risk__c/fields/Outcome_of_MRG__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_MRG__c</fullName>
    <description>Outcome after completing the online MRG Decision Tree</description>
    <inlineHelpText>Outcome after completing the online MRG Decision Tree. If you decide to override the MRG, please provide a brief justification in the text box below</inlineHelpText>
    <label>Outcome of MRG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Report</fullName>
            </value>
            <value>
                <fullName>Report to Child Services</fullName>
            </value>
            <value>
                <fullName>Document &amp; Monitor</fullName>
            </value>
            <value>
                <fullName>Override: Professional Judgement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>