DevOps/force-app/main/default/objects/Risk__c/fields/Override_Justification__c.field-meta.xml
<CustomField>
    <fullName>Override_Justification__c</fullName>
    <description>If you have overridden the FACS MRG Outcome, please explain briefly</description>
    <inlineHelpText>If you have overridden the FACS MRG Outcome, please explain briefly</inlineHelpText>
    <label>Override Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>