DevOps/force-app/main/default/objects/Risk__c/fields/Parent_Risk__c.field-meta.xml
<CustomField>
    <fullName>Parent_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Risk</label>
    <referenceTo>Risk__c</referenceTo>
    <relationshipLabel>Risks (Parent Risk)</relationshipLabel>
    <relationshipName>Child_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>