DevOps/force-app/main/default/objects/Risk__c/fields/Park_the_car_in_an_area_that_is_visible__c.field-meta.xml
<CustomField>
    <fullName>Park_the_car_in_an_area_that_is_visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Park the car in an area that is visible to public and is accessible with room to pull away quickly.</description>
    <inlineHelpText>Park the car in an area that is visible to public and is accessible with room to pull away quickly.</inlineHelpText>
    <label>Park the car in an area that is visible</label>
    <type>Checkbox</type>
</CustomField>