DevOps/force-app/main/default/objects/Risk__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <formula>IF(ISNULL(Contact__c)  ||  ISBLANK(Contact__c), Case__r.Contact.Fullname__c, Contact__r.Fullname__c)</formula>
    <label>Participant</label>
    <type>Text</type>
</CustomField>