DevOps/force-app/main/default/objects/Risk__c/fields/Person_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Person_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person Responsible: Contact Record TypeEQUALSProvider, Worker</description>
    <label>Person Responsible</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Risks6</relationshipName>
    <type>Lookup</type>
</CustomField>