DevOps/force-app/main/default/objects/Risk__c/fields/Pets_Dogs__c.field-meta.xml
<CustomField>
    <fullName>Pets_Dogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asked if the client has pets?

Was there a lack of commitment to containing dogs or having them on a leash prior to the visit?</description>
    <inlineHelpText>Asked if the client has pets?

Was there a lack of commitment to containing dogs or having them on a leash prior to the visit?</inlineHelpText>
    <label>Pets / Dogs</label>
    <type>Checkbox</type>
</CustomField>