DevOps/force-app/main/default/objects/Risk__c/fields/Phone_is_on__c.field-meta.xml
<CustomField>
    <fullName>Phone_is_on__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phone is on.</description>
    <inlineHelpText>Phone is on.</inlineHelpText>
    <label>Phone is on.</label>
    <type>Checkbox</type>
</CustomField>