DevOps/force-app/main/default/objects/Risk__c/fields/Planning_Mitigation_Notes_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Planning_Mitigation_Notes_Rationale__c</fullName>
    <label>Planning Mitigation Notes / Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>