DevOps/force-app/main/default/objects/Risk__c/fields/Pre_Approval_Mitigation_Notes_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Mitigation_Notes_Rationale__c</fullName>
    <description>Notes / Rationale to support the mitigation strategies discussed with your Supervisor</description>
    <inlineHelpText>Notes / Rationale to support the mitigation strategies discussed with your Supervisor</inlineHelpText>
    <label>Pre-Approval Mitigation Notes/Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>