DevOps/force-app/main/default/objects/Risk__c/fields/Primary_Diagnosis_Hospitalisation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis_Hospitalisation__c</fullName>
    <description>Have any of the above issues received a primary diagnosis / hospitalisation?</description>
    <inlineHelpText>Have any of the above issues received a primary diagnosis / hospitalisation?</inlineHelpText>
    <label>Primary Diagnosis / Hospitalisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>