DevOps/force-app/main/default/objects/Risk__c/fields/Primary_Second_workers_agreed_on_code_to__c.field-meta.xml
<CustomField>
    <fullName>Primary_Second_workers_agreed_on_code_to__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary and Second workers have agreed on code to end visit.</description>
    <inlineHelpText>Primary and Second workers have agreed on code to end visit.</inlineHelpText>
    <label>Primary+Second workers agreed on code to</label>
    <type>Checkbox</type>
</CustomField>