DevOps/force-app/main/default/objects/Risk__c/fields/Program_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager_Email__c</fullName>
    <description>Email field for Risk Email Sending</description>
    <label>Program Manager Email</label>
    <type>Email</type>
</CustomField>