DevOps/force-app/main/default/objects/Risk__c/fields/Psychosis_Related__c.field-meta.xml
<CustomField>
    <fullName>Psychosis_Related__c</fullName>
    <label>Psychosis Related</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hallucinations</fullName>
            </value>
            <value>
                <fullName>Paranoia</fullName>
            </value>
            <value>
                <fullName>Feelings of being persecuted by others</fullName>
            </value>
            <value>
                <fullName>Feeling over-sensitive or obsessive about something</fullName>
            </value>
            <value>
                <fullName>Lack of insight around psychosis and symptoms</fullName>
            </value>
            <value>
                <fullName>Poor understanding of reality</fullName>
            </value>
            <value>
                <fullName>Distress, crying, high levels of anxiety and fearfulness</fullName>
            </value>
            <value>
                <fullName>Feelings of not wanting to burden others</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>