DevOps/force-app/main/default/objects/Risk__c/fields/Psychosis_Related_Comment__c.field-meta.xml
<CustomField>
    <fullName>Psychosis_Related_Comment__c</fullName>
    <label>Psychosis Related (Comment)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>