DevOps/force-app/main/default/objects/Risk__c/fields/Psychosis_Related_Scale__c.field-meta.xml
<CustomField>
    <fullName>Psychosis_Related_Scale__c</fullName>
    <label>Psychosis Related (Scale)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>