DevOps/force-app/main/default/objects/Risk__c/fields/RAMP_Stage__c.field-meta.xml
<CustomField>
    <fullName>RAMP_Stage__c</fullName>
    <label>RAMP Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PART A</fullName>
            </value>
            <value>
                <fullName>PART B</fullName>
            </value>
            <value>
                <fullName>MONITOR</fullName>
            </value>
            <value>
                <fullName>CLOSE RAMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>