DevOps/force-app/main/default/objects/Risk__c/fields/Reason_for_Closure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closure__c</fullName>
    <label>Reason for Closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No longer an issue</fullName>
            </value>
            <value>
                <fullName>No longer required</fullName>
            </value>
            <value>
                <fullName>Associated plan cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>