DevOps/force-app/main/default/objects/Risk__c/fields/Reason_for_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Restriction__c</fullName>
    <description>Record the reasons a restriction was/is placed on the Client / Participant of concern</description>
    <inlineHelpText>Record the reasons a restriction was/is placed on the Client / Participant of concern</inlineHelpText>
    <label>Reason for Restriction</label>
    <type>TextArea</type>
</CustomField>