DevOps/force-app/main/default/objects/Risk__c/fields/Related_to__c.field-meta.xml
<CustomField>
    <fullName>Related_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to</label>
    <referenceTo>Risk__c</referenceTo>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>