DevOps/force-app/main/default/objects/Risk__c/fields/Relationship_Sexuality__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Sexuality__c</fullName>
    <label>Relationship + Sexuality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At risk of exploitation (including notfully consenting)</fullName>
            </value>
            <value>
                <fullName>Unsafe sex</fullName>
            </value>
            <value>
                <fullName>Behaviours of concerns (problematic sexual behaviour against children and/or adults, exposing and/or touching own private body parts in non-private settings)</fullName>
            </value>
            <value>
                <fullName>Non-consensual touching (private body parts and/or non-private parts of another person</fullName>
            </value>
            <value>
                <fullName>Domestic violence / FamilyViolence</fullName>
            </value>
            <value>
                <fullName>Other (discussing inappropriate sexual subjects, obscene gestures, disrobing in non-private settings)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>