DevOps/force-app/main/default/objects/Risk__c/fields/Relationship_Sexuality_Comment__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Sexuality_Comment__c</fullName>
    <label>Relationship + Sexuality (Comment)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>