DevOps/force-app/main/default/objects/Risk__c/fields/Relationship_Sexuality_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Sexuality_Mitigation__c</fullName>
    <label>Relationship + Sexuality (Mitigation)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>