DevOps/force-app/main/default/objects/Risk__c/fields/Remain_Alert_if_things_escalte__c.field-meta.xml
<CustomField>
    <fullName>Remain_Alert_if_things_escalte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remain alert during the visit and if the client begins to escalate/mood changes or other people enter the home and your assessment of risk changes – leave immediately.</description>
    <inlineHelpText>Remain alert during the visit and if the client begins to escalate/mood changes or other people enter the home and your assessment of risk changes – leave immediately.</inlineHelpText>
    <label>Remain Alert if things escalte</label>
    <type>Checkbox</type>
</CustomField>