DevOps/force-app/main/default/objects/Risk__c/fields/Remain_respectful__c.field-meta.xml
<CustomField>
    <fullName>Remain_respectful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remain respectful.</description>
    <inlineHelpText>Remain respectful.</inlineHelpText>
    <label>Remain respectful.</label>
    <type>Checkbox</type>
</CustomField>