DevOps/force-app/main/default/objects/Risk__c/fields/Remote_or_Isolated_Location__c.field-meta.xml
<CustomField>
    <fullName>Remote_or_Isolated_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do they live in an isolated or remote location?</description>
    <inlineHelpText>Do they live in an isolated or remote location?</inlineHelpText>
    <label>Remote or Isolated Location</label>
    <type>Checkbox</type>
</CustomField>