DevOps/force-app/main/default/objects/Risk__c/fields/Reported_to_DCJ_Helpline__c.field-meta.xml
<CustomField>
    <fullName>Reported_to_DCJ_Helpline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reported to DCJ Helpline?</label>
    <type>Checkbox</type>
</CustomField>