DevOps/force-app/main/default/objects/Risk__c/fields/Returning_to_Work_after_the_Home_Visit__c.field-meta.xml
<CustomField>
    <fullName>Returning_to_Work_after_the_Home_Visit__c</fullName>
    <description>Returning to Work after the Home Visit Note</description>
    <inlineHelpText>Returning to Work after the Home Visit Note</inlineHelpText>
    <label>Returning to Work after the Home Visit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>