DevOps/force-app/main/default/objects/Risk__c/fields/Review_of_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Review_of_Restriction__c</fullName>
    <description>Select the date that the restriction is to be reviewed</description>
    <inlineHelpText>Select the date that the restriction is to be reviewed</inlineHelpText>
    <label>Review of Restriction</label>
    <type>Date</type>
</CustomField>