DevOps/force-app/main/default/objects/Risk__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reviewed By: Contact Record TypeEQUALSWorker</description>
    <label>Reviewed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Risks7</relationshipName>
    <type>Lookup</type>
</CustomField>