DevOps/force-app/main/default/objects/Risk__c/fields/Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date__c</fullName>
    <description>Reviewed Date</description>
    <inlineHelpText>Reviewed Date</inlineHelpText>
    <label>Reviewed Date</label>
    <type>Date</type>
</CustomField>