DevOps/force-app/main/default/objects/Risk__c/fields/Risk_Factors_identified_in_Review_Note__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factors_identified_in_Review_Note__c</fullName>
    <description>Risk Factors identified in Review Process</description>
    <inlineHelpText>Risk Factors identified in Review Process</inlineHelpText>
    <label>Risk Factors identified in Review Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>