DevOps/force-app/main/default/objects/Risk__c/fields/Risk_Updated__c.field-meta.xml
<CustomField>
    <fullName>Risk_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Automated flow to prevent endless loop</description>
    <inlineHelpText>Used in Automated flow to prevent endless loop</inlineHelpText>
    <label>Risk Updated</label>
    <type>Checkbox</type>
</CustomField>