DevOps/force-app/main/default/objects/Risk__c/fields/Risks_Shared_with_2nd_Worker__c.field-meta.xml
<CustomField>
    <fullName>Risks_Shared_with_2nd_Worker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Second worker is aware of risks (if second worker attending)</description>
    <inlineHelpText>Second worker is aware of risks (if second worker attending)</inlineHelpText>
    <label>Risks Shared with 2nd Worker</label>
    <type>Checkbox</type>
</CustomField>