DevOps/force-app/main/default/objects/Risk__c/fields/RoSH_Client__c.field-meta.xml
<CustomField>
    <fullName>RoSH_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RoSH Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Risks (ROSH Client)</relationshipLabel>
    <relationshipName>Risks8</relationshipName>
    <type>Lookup</type>
</CustomField>