DevOps/force-app/main/default/objects/Risk__c/fields/RoSH_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>RoSH_Reference_Number__c</fullName>
    <label>RoSH Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>