DevOps/force-app/main/default/objects/Risk__c/fields/RoSH_signed_off_by__c.field-meta.xml
<CustomField>
    <fullName>RoSH_signed_off_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RoSH signed off by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Risks (ROSH signed off by)</relationshipLabel>
    <relationshipName>Risks9</relationshipName>
    <type>Lookup</type>
</CustomField>