DevOps/force-app/main/default/objects/Risk__c/fields/Safety_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Safety_Action_Plan__c</fullName>
    <label>Safety Action Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>