DevOps/force-app/main/default/objects/Risk__c/fields/Safety_Action_Referral_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Safety_Action_Referral_Form_Submitted__c</fullName>
    <label>Safety Action Referral Form Submitted</label>
    <type>Date</type>
</CustomField>