DevOps/force-app/main/default/objects/Risk__c/fields/Safety_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Safety_Plan_Status__c</fullName>
    <label>Safety Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>