DevOps/force-app/main/default/objects/Risk__c/fields/Safety_Risk_Home_Visit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Safety_Risk_Home_Visit_Comments__c</fullName>
    <label>Safety Risk &amp; Home Visit Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>