DevOps/force-app/main/default/objects/Risk__c/fields/Select_other_records_created_violence__c.field-meta.xml
<CustomField>
    <fullName>Select_other_records_created_violence__c</fullName>
    <description>Where violence has been indicated as a risk in this assessment, a record must be made for future reference (tick one or more when record has been completed):</description>
    <inlineHelpText>Where violence has been indicated as a risk in this assessment, a record must be made for future reference (tick one or more when record has been completed):</inlineHelpText>
    <label>Select other records created - violence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Database (Alert Section)</fullName>
            </value>
            <value>
                <fullName>Client File</fullName>
            </value>
            <value>
                <fullName>High Risk Alert Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>