DevOps/force-app/main/default/objects/Risk__c/fields/Senior_Manager__c.field-meta.xml
<CustomField>
    <fullName>Senior_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RAMP Senior Manager Approval</description>
    <inlineHelpText>RAMP Senior Manager Approval</inlineHelpText>
    <label>Senior Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>