DevOps/force-app/main/default/objects/Risk__c/fields/Staff_Contacting_DCJ__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contacting_DCJ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filter Criteria	
Staff Contacting DCJ: Contact Record TypeEQUALSProvider, Worker

The Staff member contacting DCJ</description>
    <inlineHelpText>The Staff member contacting DCJ</inlineHelpText>
    <label>Staff Contacting DCJ</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Risks6F4M</relationshipName>
    <type>Lookup</type>
</CustomField>