DevOps/force-app/main/default/objects/Risk__c/fields/Staff_Member_Responsible_for_DVSAT__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member_Responsible_for_DVSAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filter Criteria	
Staff Member Responsible for DVSAT: Contact Record TypeEQUALSWorker</description>
    <inlineHelpText>Filter Criteria	
Staff Member Responsible for DVSAT: Contact Record TypeEQUALSWorker</inlineHelpText>
    <label>Staff Member Responsible for DVSAT</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Risks6F4g</relationshipName>
    <type>Lookup</type>
</CustomField>