DevOps/force-app/main/default/objects/Risk__c/fields/Taking_a_support_person_to_the_visit__c.field-meta.xml
<CustomField>
    <fullName>Taking_a_support_person_to_the_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Taking a support person to the visit?</description>
    <inlineHelpText>Taking a support person to the visit?</inlineHelpText>
    <label>Taking a support person to the visit?</label>
    <type>Checkbox</type>
</CustomField>