DevOps/force-app/main/default/objects/Risk__c/fields/Team_Leader_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader_Email__c</fullName>
    <description>Email field for Risk Email Sending</description>
    <label>Team Leader Email</label>
    <type>Email</type>
</CustomField>