DevOps/force-app/main/default/objects/Risk__c/fields/Threat_Level__c.field-meta.xml
<CustomField>
    <fullName>Threat_Level__c</fullName>
    <description>Threat Level - Select appropriate level based on Part A result and/or Part B result</description>
    <inlineHelpText>Threat Level - Select appropriate level based on Part A result and/or Part B result</inlineHelpText>
    <label>Threat Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Threat</fullName>
            </value>
            <value>
                <fullName>At Serious Threat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>