DevOps/force-app/main/default/objects/Risk__c/fields/Time_Frame_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_Frame_Days__c</fullName>
    <description>Time Frame (Days)</description>
    <inlineHelpText>Time Frame (Days)</inlineHelpText>
    <label>Time Frame (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>