DevOps/force-app/main/default/objects/Risk__c/fields/Unrestricted_animals_on_the_property__c.field-meta.xml
<CustomField>
    <fullName>Unrestricted_animals_on_the_property__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Observe home and close proximity, are there any unrestricted animals on the property.</description>
    <inlineHelpText>Observe home and close proximity, are there any unrestricted animals on the property.</inlineHelpText>
    <label>Unrestricted animals on the property.</label>
    <type>Checkbox</type>
</CustomField>